--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.0.1",
   "description": "GitHub Action to retrieve an authentication token for a GitHub App",
   "main": "index.js",
+  "scripts": {
+    "dist": "yarn ncc build index.js --license licenses.txt"
+  },
   "repository": "https://github.com/U8NWXD/get-github-app-token.git",
   "author": "U8NWXD",
   "license": "Apache-2.0",
-  "type": "module",
   "dependencies": {
     "@actions/core": "^1.6.0",
     "@octokit/app": "^12.0.5"
